syntax = "proto3";
import public "google/protobuf/timestamp.proto";
package protobuf;


service UserService {

    rpc Signup (SignupReq) returns (LoginRep) {
    }

    rpc Login (LoginReq) returns (LoginRep) {
    }

    rpc Logout (LogoutReq) returns (LogoutRep) {
    }

}

// The request message containing the user's name.
message User {
    uint64 ID = 1;
    string name = 2;
    google.protobuf.Timestamp activatedAt = 3;
    string password = 4;
    string email = 5;
    string phone = 6;
    uint32 sex = 7;
    uint64 Score = 8;
    string signature = 9;
    string avatarURL = 10;
    uint32 Role = 11;
    google.protobuf.Timestamp createdAt = 12;
    int32 status = 13;
}

message SignupReq {
    string name = 2;
    string password = 4;
    string email = 5;
    string phone = 6;
    uint32 sex = 7;
    uint64 Score = 8;
    string signature = 9;

}

message LoginReq {
    string input = 1;
    string password = 2;
    string luosimaoRes = 3;
}

message LoginRep {
    string token = 1;
    User user = 2;
    string msg = 3;
}

message LogoutReq {
    uint64 ID = 1;
}

message LogoutRep {
    string msg = 1;
}
